; ModuleID = '/home/carl/AnghaBench/qmk_firmware/users/stanrc85/extr_stanrc85.c_ctl_copy_reset.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/users/stanrc85/extr_stanrc85.c_ctl_copy_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@td_state = common dso_local global i32 0, align 4
@KC_RCTL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ctl_copy_reset(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load i32, i32* @td_state, align 4
  switch i32 %5, label %12 [
    i32 128, label %6
    i32 129, label %7
    i32 130, label %11
  ]

6:                                                ; preds = %2
  br label %12

7:                                                ; preds = %2
  %8 = load i32, i32* @KC_RCTL, align 4
  %9 = call i32 @MOD_BIT(i32 %8)
  %10 = call i32 @unregister_mods(i32 %9)
  br label %12

11:                                               ; preds = %2
  br label %12

12:                                               ; preds = %2, %11, %7, %6
  ret void
}

declare dso_local i32 @unregister_mods(i32) #1

declare dso_local i32 @MOD_BIT(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
